# cpp_sp2

./: CMakeLists.txt  cpp_sp2  showcase.txt
include/: MPInt.h  MPIntBase.h  core.h
include/base/: MPIntBase.h  core.h
include/constructors/: constructors.h
include/conversion/: conversion.h  convert.h
include/core/: core.h
include/emulator/: MPCalc.h  MPInt.h  MPIntWrapper.h  concepts.h
include/emulator/exceptions/: InvalidOptionException.h  OverflowException.h
include/emulator/tests/: tests.h
include/emulator/util/: FixedQueue.h  concepts.h  string-utils.h
include/math/: math.h
include/operators/: arithemetic.h  arithmetic-assigment.h  assignment.h  io-stream.h  relational.h  unary.h
include/relational/: relational.h
include/util/: OverflowException.h  OverflowRuntimeException.h  constants.h  math.h  util.h  validators.h
src/: CMakeLists.txt  MPCalc.cpp  main.cpp
