add_executable(
        cpp_sp2
        main.cpp
        ../include/MPInt.h ../include/util/validators.h ../include/constructors/constructors.h ../include/operators/assignment.h ../include/operators/arithmetic-assigment.h ../include/operators/arithemetic.h ../include/operators/unary.h ../include/operators/io-stream.h ../include/util/math.h ../include/relational/relational.h)
